fix text overflow for super long nucleotide change

--- a/src/clincoded/static/scss/clincoded/modules/_curator.scss
+++ b/src/clincoded/static/scss/clincoded/modules/_curator.scss
@@ -702,10 +702,7 @@
 }
 
 .title-ellipsis {
-    overflow: hidden;
-    display: inline-block;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    word-break: break-all;
     max-width: 100%;
     vertical-align: bottom;
 
@@ -1573,11 +1570,13 @@
             .basic-info .table.refseq-transcript td,
             .basic-info .table.ensembl-transcript th,
             .basic-info .table.ensembl-transcript td {
-                /* sum up with .exon-column's width to a total of 100% */
-                width: 29%;
-
+                /* 4 columns, sum up with .exon-column's width to a total of 100% */
+                width: 28%;
+                &.hgvs-term {
+                    width: 35%;
+                }
                 &.exon-column {
-                    width: 13%;
+                    width: 9%;
                 }
             }
 
